// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search /w design 1`] = `
<div
  aria-autocomplete="list"
  aria-disabled="false"
  aria-invalid="false"
  class="Searchstyles__Box-sc-1lyvud3-0 boYLWE"
  role="combobox"
>
  <label
    class="Inputstyles__Wrapper-hc8ttv-6 daAZxl"
  >
    <div
      class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
    >
      <div
        class="Inputstyles__Box-hc8ttv-1 bzkyqR"
      >
        <input
          aria-invalid="false"
          class="Inputstyles__StyledInput-hc8ttv-2 bUBKOu"
          value=""
        />
      </div>
    </div>
  </label>
</div>
`;

exports[`Search /w design 2`] = `
<div
  aria-autocomplete="list"
  aria-disabled="false"
  aria-invalid="false"
  class="Searchstyles__Box-sc-1lyvud3-0 boYLWE"
  role="combobox"
>
  <label
    class="Inputstyles__Wrapper-hc8ttv-6 lkLMMk"
  >
    <div
      class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
    >
      <div
        class="Inputstyles__Box-hc8ttv-1 bzkyqR"
      >
        <input
          aria-invalid="false"
          class="Inputstyles__StyledInput-hc8ttv-2 dyFbgS"
          value=""
        />
      </div>
    </div>
  </label>
</div>
`;

exports[`Search /w invalid 1`] = `
<div
  aria-autocomplete="list"
  aria-disabled="false"
  aria-invalid="true"
  class="Searchstyles__Box-sc-1lyvud3-0 boYLWE"
  role="combobox"
>
  <label
    class="Inputstyles__Wrapper-hc8ttv-6 iaA-dFS"
  >
    <div
      class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
    >
      <div
        class="Inputstyles__Box-hc8ttv-1 bzkyqR"
      >
        <input
          aria-invalid="true"
          class="Inputstyles__StyledInput-hc8ttv-2 bUBKOu"
          value=""
        />
      </div>
    </div>
  </label>
</div>
`;

exports[`Search /w size 1`] = `
<div
  aria-autocomplete="list"
  aria-disabled="false"
  aria-invalid="false"
  class="Searchstyles__Box-sc-1lyvud3-0 boYLWE"
  role="combobox"
>
  <label
    class="Inputstyles__Wrapper-hc8ttv-6 gPunPw"
  >
    <div
      class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
    >
      <div
        class="Inputstyles__Box-hc8ttv-1 bzkyqR"
      >
        <input
          aria-invalid="false"
          class="Inputstyles__StyledInput-hc8ttv-2 hbWobN"
          value=""
        />
      </div>
    </div>
  </label>
</div>
`;

exports[`Search /w size 2`] = `
<div
  aria-autocomplete="list"
  aria-disabled="false"
  aria-invalid="false"
  class="Searchstyles__Box-sc-1lyvud3-0 boYLWE"
  role="combobox"
>
  <label
    class="Inputstyles__Wrapper-hc8ttv-6 eablnU"
  >
    <div
      class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
    >
      <div
        class="Inputstyles__Box-hc8ttv-1 bzkyqR"
      >
        <input
          aria-invalid="false"
          class="Inputstyles__StyledInput-hc8ttv-2 bUBKOu"
          value=""
        />
      </div>
    </div>
  </label>
</div>
`;

exports[`Search /w size 3`] = `
<div
  aria-autocomplete="list"
  aria-disabled="false"
  aria-invalid="false"
  class="Searchstyles__Box-sc-1lyvud3-0 boYLWE"
  role="combobox"
>
  <label
    class="Inputstyles__Wrapper-hc8ttv-6 daAZxl"
  >
    <div
      class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
    >
      <div
        class="Inputstyles__Box-hc8ttv-1 bzkyqR"
      >
        <input
          aria-invalid="false"
          class="Inputstyles__StyledInput-hc8ttv-2 bUBKOu"
          value=""
        />
      </div>
    </div>
  </label>
</div>
`;

exports[`Search /w size 4`] = `
<div
  aria-autocomplete="list"
  aria-disabled="false"
  aria-invalid="false"
  class="Searchstyles__Box-sc-1lyvud3-0 boYLWE"
  role="combobox"
>
  <label
    class="Inputstyles__Wrapper-hc8ttv-6 dcSDdd"
  >
    <div
      class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
    >
      <div
        class="Inputstyles__Box-hc8ttv-1 bzkyqR"
      >
        <input
          aria-invalid="false"
          class="Inputstyles__StyledInput-hc8ttv-2 QjOJw"
          value=""
        />
      </div>
    </div>
  </label>
</div>
`;

exports[`Search w/ any props 1`] = `
<div
  aria-autocomplete="list"
  aria-disabled="false"
  aria-invalid="false"
  class="Searchstyles__Box-sc-1lyvud3-0 boYLWE"
  role="combobox"
>
  <label
    class="Inputstyles__Wrapper-hc8ttv-6 daAZxl"
  >
    <div
      class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
    >
      <div
        class="Inputstyles__Box-hc8ttv-1 bzkyqR"
      >
        <input
          aria-invalid="false"
          class="Inputstyles__StyledInput-hc8ttv-2 bUBKOu"
          title="title"
          value=""
        />
      </div>
    </div>
  </label>
</div>
`;
